--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
 <body>
     
-    <div class="text-green-400 text-xl " id="root">
-            
+    <div id="root">  
     </div>
 
     <script type="module" src="src/script.js"></script>
